--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <version>0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Test suite: ets-wfs30</name>
+  <name>WFS 3.0 Conformance Test Suite</name>
   <description>Describe purpose of test suite.</description>
   <url>http://opengeospatial.github.io/ets-wfs30/</url>
   <licenses>
