--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
 
   <profiles>
     <profile>
-      <id>web-tests</id>
+      <id>integration-tests</id>
       <build>
         <plugins>
           <plugin>
