--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,18 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>net.jadler</groupId>
+      <artifactId>jadler-core</artifactId>
+      <version>1.3.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.jadler</groupId>
+      <artifactId>jadler-jetty</artifactId>
+      <version>1.3.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
