--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <parent>
     <groupId>org.opengis.cite</groupId>
@@ -200,7 +201,10 @@
           <scmBranch>gh-pages</scmBranch>
         </configuration>
       </plugin>
-      <plugin>
+    </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
           <groupId>io.fabric8</groupId>
           <artifactId>docker-maven-plugin</artifactId>
           <version>0.28.0</version>
@@ -272,7 +276,8 @@
             </artifactItems>
           </configuration>
         </plugin>
-    </plugins>
+      </plugins>
+    </pluginManagement>
   </build>
 
   <profiles>
