--- a/jenkinsfiles/release/Jenkinsfile
+++ b/jenkinsfiles/release/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     stage('Preparation') {
       steps{
         deleteDir()
-        sh 'git clone git@github.com:opengeospatial/ets-ogcapi-features-1.0.git .'
+        sh 'git clone git@github.com:opengeospatial/ets-ogcapi-features10.git .'
       }
     }
     stage('Release') {
