--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -19,10 +19,10 @@ RUN cd /root/ && unzip -q teamengine-console-*-base.zip -d /root/te_base
 ENV JAVA_OPTS="-Xms1024m -Xmx2048m -DTE_BASE=/root/te_base"
 
 # add ETS for OGC APP Features 1.0
-ADD maven/ets-ogcapi-features-1.0-*-ctl.zip /root/
-RUN cd /root/ && unzip -q ets-ogcapi-features-1.0-*-ctl.zip -d /root/te_base/scripts
-ADD maven/ets-ogcapi-features-1.0-*-deps.zip /root/
-RUN cd /root/ && unzip -q -o ets-ogcapi-features-1.0-*-deps.zip -d /usr/local/tomcat/webapps/teamengine/WEB-INF/lib
+ADD maven/ets-ogcapi-features10-*-ctl.zip /root/
+RUN cd /root/ && unzip -q ets-ogcapi-features10-*-ctl.zip -d /root/te_base/scripts
+ADD maven/ets-ogcapi-features10-*-deps.zip /root/
+RUN cd /root/ && unzip -q -o ets-ogcapi-features10-*-deps.zip -d /usr/local/tomcat/webapps/teamengine/WEB-INF/lib
 
 # run tomcat
 CMD ["catalina.sh", "jpda", "run"]
