--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
     <dependency>
       <groupId>com.reprezen.kaizen</groupId>
       <artifactId>openapi-parser</artifactId>
-      <version>2.1.1-201803281732</version>
+      <version>4.0.4</version>
     </dependency>
     <dependency>
       <groupId>com.google.inject</groupId>
