#151 - implemented A.1, Abstract Test 1

--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,11 @@
       <artifactId>xml-apis</artifactId>
       <version>1.4.01</version>
     </dependency>
+    <dependency>
+      <groupId>commons-validator</groupId>
+      <artifactId>commons-validator</artifactId>
+      <version>1.7</version>
+    </dependency>
   </dependencies>
 
   <build>
