--- a/src/main/resources/org/opengis/cite/ogcapifeatures10/ets.properties
+++ b/src/main/resources/org/opengis/cite/ogcapifeatures10/ets.properties
@@ -1,3 +1,5 @@
 ets-title = ${project.name}
 ets-version = ${project.version}
 ets-code = ${ets-code}
+# the number of features to test (is missing or less than 0 all features are tested)
+noOfFeatures=10
