--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
       <version>1.18.1</version>
     </dependency>
     <dependency>
+      <groupId>org.locationtech.proj4j</groupId>
+      <artifactId>proj4j</artifactId>
+      <version>1.1.3</version>
+    </dependency>
+    <dependency>
       <groupId>org.locationtech.jts.io</groupId>
       <artifactId>jts-io-common</artifactId>
       <version>1.18.1</version>
