Add credentials to SoapUI project and adjust Maven configuration and Jenkinsfile

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,8 @@
     <docker.teamengine.version>5.4.1</docker.teamengine.version>
     <soapui.test.fail.ignore>false</soapui.test.fail.ignore>
     <soapui.teamengine.endpoint>http://localhost:8081/teamengine</soapui.teamengine.endpoint>
+    <soapui.teamengine.user>ogctest</soapui.teamengine.user>
+    <soapui.teamengine.password>ogctest</soapui.teamengine.password>
     <soapui.iut>https://demo.ldproxy.net/daraa</soapui.iut>
     <soapui.tests.passed>401</soapui.tests.passed>
     <soapui.tests.skipped>0</soapui.tests.skipped>
@@ -347,6 +349,8 @@
             <testFailIgnore>${soapui.test.fail.ignore}</testFailIgnore>
             <projectProperties>
               <value>teamengine.endpoint=${soapui.teamengine.endpoint}</value>
+              <value>teamengine.user=${soapui.teamengine.user}</value>
+              <value>teamengine.password=${soapui.teamengine.password}</value>
               <value>iut=${soapui.iut}</value>
               <value>tests.passed=${soapui.tests.passed}</value>
               <value>tests.skipped=${soapui.tests.skipped}</value>
